[package]
name = "pumpkin-jam"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

[dependencies]
bevy = { version = "0.8", default-features = true, features = [
    "bevy_gltf",
    "jpeg",
    "png",
    "x11",
] }
leafwing-input-manager = "0.5"
bevy_rapier3d = "0.16.2"
bevy_kira_audio = "0.12"
bevy-hikari = { path = "../bevy-hikari" }
bevy-inspector-egui = "0.13"
smooth-bevy-cameras = "0.5"
bevy_mod_wanderlust = "0.2"
